--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+sqlalchemy = "^2.0.36"
+aiomysql = "^0.2.0"
 
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.1.1"
+alembic = "^1.14.0"
 
 [build-system]
 requires = ["poetry-core"]
