--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,12 @@ readme = "README.md"
 python = "^3.12"
 sqlalchemy = "^2.0.36"
 aiomysql = "^0.2.0"
+aiohttp = "^3.11.10"
+bs4 = "^0.0.2"
+fake-useragent = "^2.0.3"
+brotli = "^1.1.0"
+lxml = "^5.3.0"
+requests = "^2.32.3"
 
 
 [tool.poetry.group.dev.dependencies]
